PDF changes